--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment-range": "^4.0.1",
     "mongodb": "^3.1.1",
     "node-json-db": "^0.7.5",
+    "object.map": "^1.0.1",
     "pauseable": "^0.3.1"
   }
 }
