--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongodb": "^3.1.1",
     "node-json-db": "^0.7.5",
     "object.map": "^1.0.1",
-    "pauseable": "^0.3.1"
+    "pauseable": "^0.3.1",
+    "semaphore": "^1.1.0"
   }
 }
